// $Id: CHANGELOG.txt,v 1.33.2.65 2010/09/03 11:06:03 sun Exp $

Admin Menu x.x-x.x, xxxx-xx-xx
------------------------------


Admin Menu 6.x-1.x, xxxx-xx-xx
------------------------------


Admin Menu 6.x-1.6, 2010-09-03
------------------------------
#567618 by indytechcook, neclimdul: Fixed tests.
#860390 by Kevin Rogers: Fixed .info file parsing error on uncertain platform.
#645526 by TravisCarden, hutch: Fixed stale local tasks markup after moving them.
#615058 by Dave Reid: Fixed compatibility with PHP 5.3.
#540762 by Deslack: Added Malay translation.
#362454 by sun: Fixed Drupal.settings.admin_menu is undefined error.


Admin Menu 6.x-1.5, 2009-07-02
------------------------------
#479922 by sun: Fixed fieldsets not collapsed on admin/build/modules/list*.
#236657 by sun: Updated for corrected arguments of system_clear_cache_submit().
#471504 by wulff: Updated Danish translation.


Admin Menu 6.x-1.4, 2009-05-15
------------------------------
by Dave Reid: Updated for getInfo() for tests.
#433016 by ultimateboy: Fixed Devel switch user links added to wrong parent.
#349169 by sun: Fixed Devel switch user links contain multiple path prefixes.
#384100 by kepol, sun: Fixed content-type items displayed in wrong place.
#373339 by sun: Fixed double-escaped 'Edit <content-type>' link titles.
by sun: Fixed admin menu tests (and updated to 6.x for SimpleTest 2.x).
#359158 by nitrospectide, sun: Fixed Devel Themer breaks admin menu.
#365335 by sun: Fixed not all variables removed after uninstall.


Admin Menu 6.x-1.3, 2009-01-24
------------------------------
#362454 by sun: Fixed Drupal.settings.admin_menu is undefined JS error in some
  browsers.


Admin Menu 6.x-1.2, 2009-01-20
------------------------------
#358697 by sun: Added docs about admin_menu_suppress() to README.txt.
#342684 by darumaki, sun: Added notice about Opera configuration to README.txt.
#350932 by sun: Fixed "Run updates" link repeated per language/site.