@@ -1,4 +1,3 @@
-/* $Id: admin_menu-rtl.css,v 1.1.2.3 2008/10/29 20:02:01 sun Exp $ */
 
 #admin-menu { text-align: right; direction: rtl; }
 #admin-menu li.admin-menu-action { float: left; }
