@@ -1,4 +1,3 @@
-/* $Id: admin_menu.css,v 1.25.2.4 2008/11/02 21:36:22 sun Exp $ */
 /**
  * Administration Menu.
  *
