@@ -1,12 +1,25 @@
 <?php
-// $Id: admin_menu.inc,v 1.11.2.26 2009/12/24 15:45:50 sun Exp $
 
 /**
  * The key function that builds the menu links whenever there is a menu rebuild.
  */
 function _admin_menu_rebuild_links() {
-  // Get the newly rebuilt menu.
-  $menu = menu_router_build();
+  $menu = NULL;
+  // Since it's possible this core function might change, check
+  // that it exists. We do this instead of calling menu_router_build()
+  // since that may trigger another menu rebuild that is not protected
+  // by the lock API.
+  if (function_exists('_menu_router_cache')) {
+    // Get the newly rebuilt menu.
+    $menu = _menu_router_cache();
+  }
+  else {
+    $menu = menu_router_build();
+  }
+  if (!$menu) {
+    // Something went wrong. Don't risk triggering another menu rebuild.
+    return;
+  }
   // Add normal and suggested items as links.
   $menu_links = array();
   foreach ($menu as $path => $item) {
@@ -411,7 +424,7 @@ function admin_menu_theme_settings() {
 function admin_menu_wipe() {
   db_query("DELETE FROM {menu_links} WHERE menu_name = 'admin_menu'");
   menu_cache_clear('admin_menu');
-  variable_set('admin_menu_rebuild_links', TRUE);
+  menu_rebuild();
 }
 
 /**
@@ -454,6 +467,10 @@ function _admin_menu_devel_settings_form_alter(&$form, $form_state) {
  * on larger Drupal sites this is actually a 10% performance increase.
  */
 function admin_menu_toggle_modules() {
+  // URL token prtects this against CSRF attacks.
+  if(!isset($_GET['token']) || ($_GET['token'] !== drupal_get_token($_GET['q']))) {
+    return MENU_ACCESS_DENIED;
+  }
   $rebuild = FALSE;
   $saved_state = variable_get('admin_menu_devel_modules_enabled', NULL);
   if (isset($saved_state)) {
@@ -501,6 +518,10 @@ function admin_menu_toggle_modules() {
  *   (optional) Name of cache to flush.
  */
 function admin_menu_flush_cache($name = NULL) {
+  // URL token protects this against CSRF attacks.
+  if(!isset($_GET['token']) || ($_GET['token'] !== drupal_get_token($_GET['q']))) {
+    return MENU_ACCESS_DENIED;
+  }
   switch ($name) {
     case 'admin_menu':
       admin_menu_wipe();
@@ -517,7 +538,7 @@ function admin_menu_flush_cache($name = NULL) {
       break;
 
     case 'menu':
-      module_invoke('menu', 'rebuild');
+      menu_rebuild();
       break;
 
     case 'requisites':
