@@ -1,12 +1,11 @@
-; $Id: admin_menu.info,v 1.5.2.2 2010/07/28 02:04:11 sun Exp $
 name = Administration menu
 description = "Provides a dropdown menu to most administrative tasks and other common destinations (to users with the proper permissions)."
 package = Administration
 core = 6.x
 
-; Information added by drupal.org packaging script on 2010-09-03
-version = "6.x-1.6"
+; Information added by drupal.org packaging script on 2011-06-16
+version = "6.x-1.8"
 core = "6.x"
 project = "admin_menu"
-datestamp = "1283512306"
+datestamp = "1308238014"
 
