@@ -1,5 +1,4 @@
 <?php
-// $Id: admin_menu.install,v 1.4.2.6 2009/01/28 19:48:41 sun Exp $
 
 /**
  * Implementation of hook_uninstall().
