@@ -1,4 +1,3 @@
-// $Id: CHANGELOG.txt,v 1.33.2.65 2010/09/03 11:06:03 sun Exp $
 
 Admin Menu x.x-x.x, xxxx-xx-xx
 ------------------------------
@@ -7,6 +6,14 @@ Admin Menu x.x-x.x, xxxx-xx-xx
 Admin Menu 6.x-1.x, xxxx-xx-xx
 ------------------------------
 
+Admin Menu 6.x-1.8, 2011-06-16
+------------------------------
+#1190466 by pwolanin: fix for Call to undefined function admin_menu_exit() breaks some drush commands.
+
+Admin Menu 6.x-1.7, 2011-06-15
+------------------------------
+#1189672 by pwolanin: fix for 'flush all caches' open to csrf.
+#1189532 by pwolanin: fix rebuild logic to avoid an extra menu rebuild.
 
 Admin Menu 6.x-1.6, 2010-09-03
 ------------------------------
